--- a/bower.json
+++ b/bower.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "angular-resource": "1.5.3",
     "ngstorage": "~0.3.10",
-    "underscore.string": "~3.3.4"
+    "underscore.string": "~3.3.4",
+    "angular-filter": "^0.5.8"
   },
   "resolutions": {
     "angular": "1.5.3"
