--- a/bower.json
+++ b/bower.json
@@ -12,7 +12,8 @@
     "angular-resource": "1.5.3",
     "ngstorage": "~0.3.10",
     "underscore.string": "~3.3.4",
-    "angular-filter": "^0.5.8"
+    "angular-filter": "^0.5.8",
+    "angular-jwt": "^0.0.9"
   },
   "resolutions": {
     "angular": "1.5.3"
